@@ -19,14 +19,166 @@
     <argLine>
       -Dfile.encoding=${project.build.sourceEncoding}
       -Dnet.bytebuddy.experimental=true
-      --add-opens=java.base/java.lang=ALL-UNNAMED
-      --add-opens=java.base/java.math=ALL-UNNAMED
-      --add-opens=java.base/java.util=ALL-UNNAMED
-      --add-opens=java.base/sun.nio.fs=ALL-UNNAMED
+      <!-- in-module testing -->
+      --add-modules junit,net.bytebuddy,org.junit.jupiter.api,org.junit.platform.commons
+      <!-- org.assertj.core -->
+      --add-opens org.assertj.core/org.assertj.core.api=ALL-UNNAMED
+      --add-opens org.assertj.core/org.assertj.core.internal=ALL-UNNAMED
+      --add-opens org.assertj.core/org.assertj.core.testkit=ALL-UNNAMED
+      <!-- java.base -->
+      --add-opens java.base/java.lang=ALL-UNNAMED
+      --add-opens java.base/java.lang=org.assertj.core
+      --add-opens java.base/java.math=ALL-UNNAMED
+      --add-opens java.base/java.math=org.assertj.core
+      --add-opens java.base/java.util=ALL-UNNAMED
+      --add-opens java.base/java.util=org.assertj.core
+      --add-opens java.base/sun.nio.fs=ALL-UNNAMED
+      <!-- org.junit.platform.commons -->
+      --add-exports org.assertj.core/org.assertj.core.testkit=org.junit.platform.commons
+      --add-exports org.assertj.core/org.assertj.core.testkit.junit.jupiter=org.junit.platform.commons
+      --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+      --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+      --add-opens org.assertj.core/org.assertj.core.api=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.abstract_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.assumptions=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.boolean_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.integer=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.integerarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.long_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.longadder=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.longarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.reference=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.atomic.referencearray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.bigdecimal=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.biginteger=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.boolean2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.booleanarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.byte2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.byte_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.bytearray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.char2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.character=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.chararray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.charsequence=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.classes=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.collection=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.comparable=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.date=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.double2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.double_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.doublearray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.doublepredicate=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.fail=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.file=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.filter=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.float2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.float_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.floatarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.future=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.instant=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.int2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.intarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.integer_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.intpredicate=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.iterable=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.iterator=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.junit.jupiter=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.list=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.localdate=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.localdatetime=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.localtime=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.long2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.long_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.longarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.longpredicate=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.map=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.matcher=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.object=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.object2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.objectarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.offsetdatetime=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.offsettime=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.optionallong=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.path=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.predicate=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.recursive.comparison=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.short2darray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.short_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.shortarray=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.spliterator=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.string_=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.test=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.throwable=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.uri=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.url=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.yearmonth=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.api.zoneddatetime=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.condition=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.description=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.error=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.error.array2d=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.error.future=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.error.uri=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.extractor=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.arrays2d=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.bigdecimals=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.bigintegers=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.boolean2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.booleanarrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.byte2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.bytearrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.bytes=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.char2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.characters=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.chararrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.classes=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.comparables=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.conditions=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.dates=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.double2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.doublearrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.doubles=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.failures=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.files=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.float2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.floatarrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.floats=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.inputstreams=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.int2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.intarrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.integers=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.iterables=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.iterators=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.lists=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.long2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.longarrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.longs=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.maps=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.object2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.objectarrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.objects=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.paths=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.short2darrays=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.spliterator=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.strings=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.throwables=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.internal.urls=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.presentation=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.testkit=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.testkit.junit.jupiter=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.util=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.util.diff=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.util.diff.myers=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.util.introspection=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.core.util.xml=org.junit.platform.commons
+      --add-opens org.assertj.core/org.assertj.scripts=org.junit.platform.commons
+      --add-opens org.assertj.core/org.example.test=org.junit.platform.commons
     </argLine>
+    <jacoco.skip>true</jacoco.skip> <!-- https://github.com/assertj/assertj/issues/3580 -->
     <rootDirectory>${project.basedir}/../</rootDirectory>
     <spotless.skip>false</spotless.skip>
-    <jacoco.skip>true</jacoco.skip> <!-- https://github.com/assertj/assertj/issues/3580 -->
     <!-- Dependency versions -->
     <byte-buddy.version>1.17.1</byte-buddy.version>
     <hamcrest.version>3.0</hamcrest.version>
@@ -299,60 +451,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <executions>
-          <!-- FIXME https://github.com/assertj/assertj/issues/3446 -->
-          <execution>
-            <id>module</id>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-            <configuration>
-              <compileSourceRoots>
-                <compileSourceRoot>${project.basedir}/src/main/module</compileSourceRoot>
-              </compileSourceRoots>
-              <multiReleaseOutput>true</multiReleaseOutput>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <trimStackTrace>false</trimStackTrace>
-          <excludes>
-            <exclude>org/assertj/core/internal/objects/Objects_assertHasOnlyFields_Test*</exclude>
-          </excludes>
-          <runOrder>random</runOrder>
-
-          <!--
-            These blocks are needed to show @DisplayName and @ParameterizedTest
-            in reports with the provided names, as well as with console output.
-          -->
-          <consoleOutputReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
-            <!-- Set to true to suppress log output being included in Surefire output -->
-            <disable>false</disable>
-          </consoleOutputReporter>
-
-          <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
-            <disable>false</disable>
-            <usePhrasedFileName>false</usePhrasedFileName>
-            <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
-            <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
-          </statelessTestsetInfoReporter>
-
-          <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
-            <disable>false</disable>
-            <usePhrasedFileName>false</usePhrasedFileName>
-            <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
-            <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
-            <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
-          </statelessTestsetReporter>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
@@ -399,14 +497,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <!-- FIXME https://github.com/assertj/assertj/issues/3446 -->
-          <legacyMode>true</legacyMode>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
